# cpp-vcpkg-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  vcpkg.json
.github/workflows/: ci.yml
